#
# Copyright (C) 2020 Arm Mbed. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[ProjectConfig]
# Only path variables can and must contain 'DIR', 'PATH' or 'ROOT' in their name as
# these tokens are used to identify path variables from other variable types.
PROJECT_ROOT = "."
PROJECT_NAME = "Mbed Tools"
PROJECT_UUID = "a58676f2-0505-4916-84ee-2ef116b07352"
PACKAGE_NAME = "mbed-tools"
NEWS_DIR = "news/"
SOURCE_DIR = "src/mbed_tools"
RELEASE_BRANCH_PATTERN = "^release.*$"
MODULE_TO_DOCUMENT = "mbed_tools"
DOCUMENTATION_DEFAULT_OUTPUT_PATH = "local_docs"
DOCUMENTATION_PRODUCTION_OUTPUT_PATH = "docs/api"
CHANGELOG_FILE_PATH = "CHANGELOG.md"

[ProjectConfig.PACKAGES_WITH_CHECKED_LICENCE]
GitPython = "BSD-3-Clause"
python-dotenv = "BSD-3-Clause"
setuptools  = "MIT"
typing-extensions = "Actually licensed as PSF-2.0."
chardet = "LGPL-2.1 - Accepted temporarily"
pyudev = "LGPL-2.1 - Accepted temporarily"
pdoc3 = "AGPL-3.0 - Accepted temporarily"
zipp = "MIT"
importlib-metadata = "Apache-2.0"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.towncrier]
directory = "news"
filename = "CHANGELOG.md"
package = "mbed_tools"
title_format = "{version} ({project_date})"
start_string = """
[//]: # (begin_release_notes)
"""

[[tool.towncrier.type]]
directory = "major"
name = "Major changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false

[tool.black]
line-length = 120

[spdx]
CreatorWebsite = "spdx.org"
PathToSpdx = "spdx/spdxdocs"
UUID = "8d60126f-ae17-4e1f-b953-b2ace2c6aab1"
