[metadata]
license_file = LICENSE

[mypy]
# flake8-mypy expects the two following for sensible formatting
show_column_numbers = True
show_error_context = False

# do not follow imports (except for ones found in typeshed)
follow_imports = skip

# since we're ignoring imports, writing .mypy_cache doesn't make any sense
cache_dir = /dev/null


ignore_missing_imports = True
disallow_untyped_calls = True
warn_return_any = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_untyped_defs = True
check_untyped_defs = True

[flake8]
exclude =
    .git,
    .tox,
    .venv,
    __pycache__,
    docs,
    news,
    dist
ignore =
    # H301: one import per line
    H301,
    # H306: imports not in alphabetical order
    H306,
    # W503:  line break before binary operator (this is no longer PEP8 compliant)
    W503,
    # E203: whitespace before ':' (this is not PEP8 compliant)
    E203,
per-file-ignores =
    # Package level init files improve user experience by short cutting imports.
    # F401: imported but unused
    __init__.py:F401
    # Don't require docstrings in tests.
    # We evaluate the need for them on case by case basis.
    tests/*.py:D1
max-line-length = 120
docstring-convention = google
copyright-check = True
select = E,F,W,C,B,H,D
